--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@ Tshepo Tseuwa
 Photography
 </p>
 <p>
-Bookings:
+<p style="font-weight:bold;">Bookings:</p>
 <br>
 <a href="tel:+27-78-654-5820">+27 78 654 5820</a>
 <br>
 <a href="mailto:tshepotseuwa@gmail.com">tshepotseuwa@gmail.com</a>
 <br>
 <br>
-Socials:
+<p style="font-weight:bold;">Socials:</p>
 <br>
 <a href="https://www.instagram.com/tshepotseuwa/">Instagram</a>
 <br>
