--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Tshepo Tseuwa
 <br>
 Photography
 </p>
-<p>
+<p style="position:absolute;top:75%;left:50%; transform:translateX(-50%) translateY(-25%);">
 <p style="font-weight:bold;">Bookings:</p>
 <br>
 <a href="tel:+27-78-654-5820">+27 78 654 5820</a>
