--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@ Bookings:
 <br>
 Socials:
 <br>
-<a href="https://www.instagram.com/tshepotseuwa/">Instagram</a>
+Instagram: <a href="https://www.instagram.com/tshepotseuwa/">@tshepotseuwa</a>
 <br>
-<a href="https://www.facebook.com/tshepotseuwaphotography/">Facebook</a>
+Facebook: <a href="https://www.facebook.com/tshepotseuwaphotography/">Tshepo Tseuwa</a>
 <br>
 <a href="https://www.twitter.com"></a>
 <br>
