--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Bookings:
 <br>
 Socials:
 <br>
-Instagram: <a href="https://www.instagram.com/tshepotseuwa/">@tshepotseuwa</a>
+<a style="text-decoration:none;">Instagram: </a><a href="https://www.instagram.com/tshepotseuwa/">@tshepotseuwa</a>
 <br>
 Facebook: <a href="https://www.facebook.com/tshepotseuwaphotography/">Tshepo Tseuwa</a>
 <br>
