--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
   text-align: center: !important;
   background: #000000;
 }
+	 a {
+  font-size:11px !important;
+		
+		 
   a:link {
   color: #ffffff;
   font-size: 11px;
