--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Socials:
 <br>
 <a style="text-decoration:none;">Instagram: </a><a href="https://www.instagram.com/tshepotseuwa/">@tshepotseuwa</a>
 <br>
-Facebook: <a href="https://www.facebook.com/tshepotseuwaphotography/">Tshepo Tseuwa</a>
+<a style="text-decoration:none;">Facebook: </a><a href="https://www.facebook.com/tshepotseuwaphotography/">Tshepo Tseuwa</a>
 <br>
 <a href="https://www.twitter.com"></a>
 <br>
