--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@ Bookings:
 <br>
 Socials:
 <br>
-<a style="text-decoration:none;">Instagram: </a><a href="https://www.instagram.com/tshepotseuwa/">@tshepotseuwa</a>
+<a style="text-decoration:none;">IG: </a><a href="https://www.instagram.com/tshepotseuwa/">@tshepotseuwa</a>
 <br>
-<a style="text-decoration:none;">Facebook: </a><a href="https://www.facebook.com/tshepotseuwaphotography/">Tshepo Tseuwa</a>
+<a style="text-decoration:none;">FB: </a><a href="https://www.facebook.com/tshepotseuwaphotography/">Tshepo Tseuwa</a>
 <br>
 <a href="https://www.twitter.com"></a>
 <br>
