--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Socials:
 <br>
 <a href="https://www.twitter.com"></a>
 <br>
-	="whatsapp:contact=015555555555@s.whatsapp.com&message="I'd like to chat with you"
+	<a href="whatsapp:contact=27786545820@s.whatsapp.com&message="Hi, Tshepo"</a>
 <br>
 <br>
 <a style="text-decoration:none;font-size:10px!important;">© 2021</a>
