--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Socials:
 <br>
 <a href="https://www.twitter.com"></a>
 <br>
-	<a href="whatsapp:contact=27786545820@s.whatsapp.com&message="Hi, Tshepo"</a>
+<a style="text-decoration:none;">WhatsApp: </a><a href="whatsapp:contact=27786545820@s.whatsapp.com&message="Hi, Tshepo">+27 78 654 5820</a>
 <br>
 <br>
 <a style="text-decoration:none;font-size:10px!important;">© 2021</a>
