--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Socials:
 <br>
 <a style="text-decoration:none;">FB: </a><a href="https://www.facebook.com/tshepotseuwaphotography/">Tshepo Tseuwa</a>
 <br>
-<a style="text-decoration:none;">WhatsApp: </a><a href="https://api.whatsapp.com/send?phone=27786545820">+27 78 654 5820</a>
+<a style="text-decoration:none;">WhatsApp: </a><a href="whatsapp://send?text=Hi, Tshepo! &phone=+27786545820">+27 78 654 5820</a>
 <br>
 <br>
 <a style="text-decoration:none;font-size:10px!important;">© 2021</a>
