--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ Photography
 <p>
 Bookings:
 <br>
-<a href="tel:+27-78-654-5820">+27 78 654 5820</a>
+<a style="text-decoration:none;">Phone: <a href="tel:+27-78-654-5820">+27 78 654 5820</a>
 <br>
-<a href="mailto:tshepotseuwa@gmail.com">tshepotseuwa@gmail.com</a>
+<a style="text-decoration:none;">Email: <a href="mailto:tshepotseuwa@gmail.com">tshepotseuwa@gmail.com</a>
 <br>
 <br>
 Socials:
