--- a/index.html
+++ b/index.html
@@ -102,18 +102,18 @@ Photography
 <p>
 Bookings:
 <br>
-<a style="text-decoration:none;">Phone: <a href="tel:+27-78-654-5820">+27 78 654 5820</a>
+<a style="text-decoration:none;"><a href="tel:+27-78-654-5820">+27 78 654 5820</a>
 <br>
-<a style="text-decoration:none;">Email: <a href="mailto:tshepotseuwa@gmail.com">tshepotseuwa@gmail.com</a>
+<a style="text-decoration:none;"><a href="mailto:tshepotseuwa@gmail.com">tshepotseuwa@gmail.com</a>
 <br>
 <br>
 Socials:
 <br>
-<a style="text-decoration:none;">Instagram: </a><a href="https://www.instagram.com/tshepotseuwa/">@tshepotseuwa</a>
+<a style="text-decoration:none;"></a><a href="https://www.instagram.com/tshepotseuwa/">Instagram</a>
 <br>
-<a style="text-decoration:none;">Facebook: </a><a href="https://www.facebook.com/tshepotseuwaphotography/">Tshepo Tseuwa</a>
+<a style="text-decoration:none;"></a><a href="https://www.facebook.com/tshepotseuwaphotography/">Facebook</a>
 <br>
-<a style="text-decoration:none;">WhatsApp: </a><a href="whatsapp://send?text=Hi, Tshepo! &phone=+27786545820">+27 78 654 5820</a>
+<a style="text-decoration:none;"></a><a href="whatsapp://send?text=Hi, Tshepo! &phone=+27786545820">WhatsApp</a>
 <br>
 <br>
 <a style="text-decoration:none;font-size:10px!important;">© 2021</a>
